[Payments] Add a browsertest for loading the settings from PaymentRequest

Bug: 733526
Test: browser_tests
Change-Id: Ia098210f38039221c1b4fcc7ee25c83f93cfb55c
Reviewed-on: https://chromium-review.googlesource.com/541679
Commit-Queue: Mathieu Perreault <mathp@chromium.org>
Commit-Queue: Anthony Vallee-Dubois <anthonyvd@chromium.org>
Reviewed-by: Anthony Vallee-Dubois <anthonyvd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#480952}
Former-commit-id: 89af2de3b342b6de68b72560c03c446f99c92904